force-app/main/default/objects/Tower__c/fields/Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payments__c</fullName>
    <label>Advance Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>