force-app/main/default/objects/Tower__c/fields/BCC_completed__c.field-meta.xml
<CustomField>
    <fullName>BCC_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCC completed</label>
    <type>Checkbox</type>
</CustomField>