force-app/main/default/objects/Tower__c/fields/Building_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Number__c</fullName>
    <label>Building Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>