force-app/main/default/objects/Tower__c/fields/ByPass_Demand_Generation__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Demand_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Demand Generation</label>
    <type>Checkbox</type>
</CustomField>