force-app/main/default/objects/Tower__c/fields/ByPass_LP_Calculation__c.field-meta.xml
<CustomField>
    <fullName>ByPass_LP_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To skip late payment calculation and raise lpc through automation.</description>
    <inlineHelpText>By Checking this check box we can stop late penalty calculation and generation through automation.</inlineHelpText>
    <label>ByPass LP Calculation</label>
    <type>Checkbox</type>
</CustomField>