force-app/main/default/objects/Tower__c/fields/ByPass_Warning_Latter__c.field-meta.xml
<CustomField>
    <fullName>ByPass_Warning_Latter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass Warning Latter</label>
    <type>Checkbox</type>
</CustomField>