force-app/main/default/objects/Tower__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Handed over projects</fullName>
            </value>
            <value>
                <fullName>Pre-registered projects</fullName>
            </value>
            <value>
                <fullName>Under pre-registration</fullName>
            </value>
            <value>
                <fullName>Pre-launch projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>