force-app/main/default/objects/Tower__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Project</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Towers</relationshipLabel>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>