force-app/main/default/objects/Tower__c/fields/Collection_Executive__c.field-meta.xml
<CustomField>
    <fullName>Collection_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Collection_Executive</relationshipName>
    <type>Lookup</type>
</CustomField>