force-app/main/default/objects/Tower__c/fields/Discount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Discount_Threshold__c</fullName>
    <label>Discount Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>