force-app/main/default/objects/Tower__c/fields/Due_Payments__c.field-meta.xml
<CustomField>
    <fullName>Due_Payments__c</fullName>
    <label>Due Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>