force-app/main/default/objects/Tower__c/fields/Project_Executive_CRM__c.field-meta.xml
<CustomField>
    <fullName>Project_Executive_CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Executive CRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Towers2</relationshipName>
    <type>Lookup</type>
</CustomField>