force-app/main/default/objects/Tower__c/fields/Project_Logo__c.field-meta.xml
<CustomField>
    <fullName>Project_Logo__c</fullName>
    <label>Project Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>