force-app/main/default/objects/Tower__c/fields/Property_Section_Deaatils_hide__c.field-meta.xml
<CustomField>
    <fullName>Property_Section_Deaatils_hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Property Section Deaatils hide</label>
    <type>Checkbox</type>
</CustomField>