force-app/main/default/objects/Tower__c/fields/RDS_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>RDS_Company_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Towers</relationshipLabel>
    <relationshipName>Towers</relationshipName>
    <type>Lookup</type>
</CustomField>