force-app/main/default/objects/Tower__c/fields/Team_Manager_CRM__c.field-meta.xml
<CustomField>
    <fullName>Team_Manager_CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Manager CRM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Towers3</relationshipName>
    <type>Lookup</type>
</CustomField>