force-app/main/default/objects/Tower__c/fields/Tower_Code__c.field-meta.xml
<CustomField>
    <fullName>Tower_Code__c</fullName>
    <displayFormat>T-{0000}</displayFormat>
    <label>Tower Code</label>
    <type>AutoNumber</type>
</CustomField>