force-app/main/default/objects/Tower__c/fields/Tower_Type__c.field-meta.xml
<CustomField>
    <fullName>Tower_Type__c</fullName>
    <label>Tower Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Villas</fullName>
            </value>
            <value>
                <fullName>Townhouses</fullName>
            </value>
            <value>
                <fullName>Plots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>