force-app/main/default/objects/Tower__c/fields/Under_Construction__c.field-meta.xml
<CustomField>
    <fullName>Under_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Construction</label>
    <type>Checkbox</type>
</CustomField>