force-app/main/default/objects/Tower__c/fields/Undertaking_For_Handover__c.field-meta.xml
<CustomField>
    <fullName>Undertaking_For_Handover__c</fullName>
    <label>Undertaking For Handover</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>