force-app/main/default/objects/Tower__c/fields/UnRegister_Project__c.field-meta.xml
<CustomField>
    <fullName>UnRegister_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UnRegister Project</label>
    <type>Checkbox</type>
</CustomField>