force-app/main/default/objects/Tower__c/fields/Xpedeon_Phase_Code__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Phase_Code__c</fullName>
    <label>Xpedeon Phase Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>