force-app/main/default/objects/Tower__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ESCROW_Account__c</columns>
    <columns>Cluster__c</columns>
    <columns>Project__c</columns>
    <columns>Address__c</columns>
    <columns>Building_Number__c</columns>
    <columns>Date_of_Completion__c</columns>
    <columns>RDS_Company_Code__c</columns>
    <columns>RERA_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>